--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TOKO SUSU</title>
+    <title>Website Kopi Kenangan Senja</title>
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -27,9 +27,16 @@
     ></script>
 
     <!-- App -->
-    <script src="src/app.js"></script>
+    <script src="src/app.js" async></script>
   </head>
   <body>
+
+    <!-- Midtrans -->
+
+    <script type="text/javascript"
+      src="https://app.sandbox.midtrans.com/snap/snap.js"
+      data-client-key="SB-Mid-client-3OQgvZJre6NVZOs2"></script>
+
     <!-- Navbar Start -->
 
     <nav class="navbar" x-data>
@@ -65,7 +72,7 @@
       <div class="shopping-cart">
         <template x-for="(item,index) in $store.cart.items" x-keys="index">
         <div class="cart-item">
-          <img :src="img/products/${item.img}" :alt="item.name" />
+          <img :src="`img/products/${item.img}`" :alt="item.name" />
           <div class="item-detail">
             <h3 x-text="item.name"></h3>
             <div class="item-price">
@@ -83,6 +90,10 @@
 
       <div class="form-container" x-show="$store.cart.items.length">
         <form action="" id="checkoutForm">
+
+          <input type="hidden" name="items" x-model="JSON.stringify($store.cart.items)">
+          <input type="hidden" name="total" x-model="$store.cart.total">
+
           <h5>Customer Detail</h5>
 
           <label for="name">
@@ -98,7 +109,7 @@
             <input type="number" name="phone" id="phone" autocomplete="off">
           </label>
 
-          <button class="checkout-button" type="submit" id="checkout-button" value="checkout">Checkout</button>
+          <button class="checkout-button disabled" type="submit" id="checkout-button" value="checkout">Checkout</button>
         </form>
       </div>
 
