--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <a href="#home">Home</a>
         <a href="#about">Tentang Kami</a>
         <a href="#menu">Menu</a>
-        <a href="#contact">Kontak</a>
         <a href="#products">Produk</a>
+        <a href="#contact">Kontak</a>
       </div>
 
       <div class="navbar-extra">
@@ -369,7 +369,8 @@
       <div class="links">
         <a href="#home">Home</a>
         <a href="#about">Tentang Kami</a>
-        <a href="#menu">Produk</a>
+        <a href="#menu">Menu</a>
+        <a href="#products">Produk</a>
         <a href="#contact">Kontak</a>
       </div>
 
